48
================

10/04/24 Add en_NP (Nepalese) locale
09/04/24 Automatically receive payments for $0 #463
09/04/24 Add email checkout to licence screens #728
08/04/24 Add LicenceRenewLink/LicenceRenewSrc wordkeys #728
08/04/24 Fix bug with forward slashes in litter references
08/04/24 Licence renewal update from received payments #728
07/04/24 Fix default payment types to account mappings in new databases
07/04/24 Sort diary task dropdown alphanumerically
06/04/24 Fix bad layout of deceased checkboxes, move owner req to entry
06/04/24 Asilomar fields should always appear for US locales
05/04/24 Licence renewal checkout screen #728
04/04/24 Online form: change spam honeypot and first name parameters
02/04/24 Support fgcol/bgcol in calendar events for future use
02/04/24 Typo in advanced search/jurisdiction field name
29/03/24 Recalculate litter count for each edit of the litter/animal
28/03/24 Remove implant date as hard requirement for AKC/BuddyID
27/03/24 Wordkeys to add animal diary notes to templates #1453
25/03/24 Add en_PT locale
24/03/24 Query builder: alias money fields correctly for formatting
21/03/24 Fix log audit messages not appearing on parent record
19/03/24 csvimport: Allow importing of non-ascii chars
18/03/24 Show mother info in banner for baby animals #836
18/03/24 Clone animal control incident #1101
18/03/24 Online form: Do not create extra reserves for the same animal/owner combo
14/03/24 Include additional fields with service json/xml_lost/found_animals
14/03/24 clinic appointment types #1317
14/03/24 Microchip registry checks should accept 9+10 digit too
14/03/24 PetLink: Disable 15 digit validation rule when registering all
13/03/24 Ability to retire animal and person flags #1388
13/03/24 Add IncidentCode and auto generation/formats #52
12/03/24 Fix bug where request sign by email reloaded
11/03/24 Use English text for payment links instead of ref (Saggi) #1450
07/03/24 Fix back button bug when logging in from a link with credentials