@@ -2,7 +2,7 @@ shelteranimalscount.org matrix 2021
 ###
 Figures
 ###
-34801/PostgreSQL rev12
+34810/PostgreSQL rev13
 ###
 Information needed to complete the shelteranimalscount.org basic data matrix 2021
 ###
@@ -64,14 +64,14 @@ BODY$$
 
 $$FOOTER
 <p>
-<sup>1</sup> Animals with a "Stray" entry category.<br/>
-<sup>2</sup> Animals with a "Surrender" entry category.<br/>
-<sup>3</sup> Animals where the "Transfer In" box is ticked in Entry, state is compared against Settings, Options, Shelter Details.<br/>
-<sup>4</sup> Animals where "Euthanasia requested" is set in the asilomar section of Entry.<br/>
+<sup>1</sup> Animals with a "Stray" entry type.<br/>
+<sup>2</sup> Animals with a "Surrender" entry type.<br/>
+<sup>3</sup> Animals where the "Transfer In" is chosen in the entry type dropdown, state is compared against Settings, Options, Shelter Details.<br/>
+<sup>4</sup> Animals where "Euthanasia requested" is chosen in the entry type dropdown.<br/>
 <sup>5</sup> Animals that have an adoption movement with a return date set.<br/>
 <sup>6</sup> Animals that have non-foster or retailer movement with a return date set.<br/>
 <sup>7</sup> Animals with a "Released to wild" or "TNR" movement but the entry category is NOT TNR.<br/>
-<sup>8</sup> Animals with a Released to Wild movement with an entry category of TNR.<br/>
+<sup>8</sup> Animals with a Released to Wild movement with an entry type of TNR.<br/>
 <sup>9</sup> Animals with an Escaped or Stolen movement.<br/>
 </p>
 FOOTER$$
@@ -188,8 +188,7 @@ AND NonShelterAnimal = 0) AS JuniorTransferOutState,
 
 (SELECT COUNT(*) FROM animal
 INNER JOIN entryreason ON entryreason.ID = animal.EntryReasonID
-WHERE OriginalOwnerID > 0 AND IsTransfer = 0 AND CrueltyCase = 0
-AND AsilomarOwnerRequestedEuthanasia = 1
+WHERE EntryTypeID = 10
 AND DateBroughtIn >= '$PARENTARG1$' AND DateBroughtIn <= '$PARENTARG2$' 
 AND SpeciesID IN ($PARENTARG3$)
 AND DateOfBirth < DateBroughtIn - INTERVAL '5 months' 
@@ -197,8 +196,7 @@ AND NonShelterAnimal = 0) AS AdultRequestedEuth,
 
 (SELECT COUNT(*) FROM animal 
 INNER JOIN entryreason ON entryreason.ID = animal.EntryReasonID
-WHERE OriginalOwnerID > 0 AND IsTransfer = 0 AND CrueltyCase = 0
-AND AsilomarOwnerRequestedEuthanasia = 1
+WHERE EntryTypeID = 10
 AND DateBroughtIn >= '$PARENTARG1$' AND DateBroughtIn <= '$PARENTARG2$' 
 AND SpeciesID IN ($PARENTARG3$)
 AND DateOfBirth >= DateBroughtIn - INTERVAL '5 months' 
